--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-responsive-images": "^1.10.1",
     "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^4.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^2.6.4",
